Hack to fix background color bleeding into edges of profile images

--- a/static/css/form/user-form.css
+++ b/static/css/form/user-form.css
@@ -162,6 +162,7 @@ label, p {
     align-items: center;
     justify-content: flex-start;
     gap: var(--smallPad);
+    max-width: 440px;
 }
 
 #submit-entity-button {
