--- a/static/css/style.css
+++ b/static/css/style.css
@@ -521,7 +521,6 @@ table {
     margin: 10px 25px 10px 25px;
     white-space: nowrap;
     border-radius: 50%;
-    border: solid 2px var(--Light);
 }
 
 .view-date-container {
